<resources>
    <string name="app_name">Healthy Living App</string>
    <string name="title_resep">Resep</string>
    <string name="title_profile">Profile</string>
    <string name="healthyliving">Healthy Living</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="button_login">Masuk</string>>
    <string name="button_signup">Daftar</string>
    <string name="descLogin">Belum punya akun?</string>
    <string name="descSignup">Sudah punya akun?</string>
    <string name="loginTitle">Masuk</string>
    <string name="signupTitle">Daftar</string>
    <string name="loginDesc">Silakan masuk untuk melanjutkan menggunakan aplikasi kami</string>
    <string name="signupDesc">Silakan isi detail dan buat akun</string>
    <string name="login_failed">Login gagal</string>
    <string name="name">Nama</string>
    <string name="email">Surel</string>
    <string name="comeSignup">Daftar</string>
    <string name="comeLogin">Masuk</string>

    <string name="input_password">Masukkan kata sandi Anda di sini</string>
    <string name="input_email">Masukkan Email Anda di sini</string>
    <string name="required_email">Email harus diisi</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="required_pass">Kata sandi harus diisi</string>
    <string name="unauthorized">Email atau kata sandi mungkin salah</string>
    <string name="message_error">Pesan kesalahan</string>
    <string name="email_taken">Email sudah digunakan</string>
    <string name="pass_length">Kata sandi minimal 8 karakter</string>
    <string name="login_success">Berhasil masuk</string>
    <string name="user_created">Akun berhasil dibuat</string>
    <string name="required_name">Nama harus diisi</string>
    <string name="input_name">Masukkan nama Anda di sini</string>
    <string name="input_cpass">Konfirmasi kata sandi Anda di sini</string>
    <string name="pass_not_match">Kata sandi tidak cocok</string>

    <string name="next">Lanjutkan</string>
    <string name="question">Isi User Data</string>
    <string name="question_desc">Data yang diisi digunakan untuk menentukan BMI dan BMR</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="years">Umur(tahun)</string>
    <string name="cm">Tinggi Badan(cm)</string>
    <string name="kg">Berat Badan(kg)</string>
    <string name="daily">Aktivitas fisik sehari-hari</string>
    <string name="findTarget">Tentukan Target Berat Badanmu</string>
    <string name="kgTarget">Target Berat Badan (kg)</string>
    <string name="yourBmr">BMR saat ini:</string>
    <string name="resultBmr">Jumlah kalori</string>
    <string name="yourBmi">BMI saat ini</string>
    <string name="resultBmi">Hasil BMI</string>
    <string name="recomendWeight">Rekomendasi Berat Badan:</string>
    <string name="resultWeight">Recomend Result</string>
    <string name="finish">Selesai</string>
    <string name="title_jelajahi">Jelajahi</string>

</resources>