<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_jelajahi">
    <fragment
        android:id="@+id/navigation_jelajahi"
        android:name="com.example.healthylivingapp.ui.fragment.JelajahiFragment"
        android:label="@string/title_jelajahi"
        tools:layout="@layout/fragment_jelajahi" />

    <fragment
        android:id="@+id/navigation_resep"
        android:name="com.example.healthylivingapp.ui.fragment.ResepFragment"
        android:label="@string/title_resep"
        tools:layout="@layout/fragment_resep" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.healthylivingapp.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>